--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -50,6 +50,7 @@ header h1 {
     font-size: 40px;
     font-weight: 800;
     text-align: center;
+    letter-spacing: 0.5rem;
     filter: drop-shadow(0 0 0.5rem var(--color));
 }
 
@@ -57,6 +58,7 @@ header h1 {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
+  width: clamp(1rem, 100%, var(--max-width));
 }
 
 .footer {
@@ -128,5 +130,34 @@ header h1 {
         filter: brightness(0.8);
       }
     }
+  }
+}
+
+.select {
+  font-size: 1.5rem;
+  width: 100%;
+  padding: 0 1rem;
+  border: 1px solid var(--color-container);
+  border-radius: 0.3rem;
+  color: color-mix(in srgb, var(--color) 80%, black);
+  background-color: var(--color-background-container);
+
+  &:focus-visible {
+    border: 1px solid var(--color-container);
+    outline: none;
+  }
+
+  & option {
+    color: color-mix(in srgb, var(--color) 90%, black);
+    background-color: var(--color-background-container);
+
+    &:nth-child(1) {
+      color: transparent;
+    }
+  }
+
+  & option[value="all"] {
+    font-weight: 700;
+    text-transform: uppercase;
   }
 }
