--- a/src/view/header/header.css
+++ b/src/view/header/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   flex: 0 0 5rem;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 1rem 2rem;
 
   text-align: center;
