--- a/src/view/header/header.css
+++ b/src/view/header/header.css
@@ -3,6 +3,7 @@
   flex: 0 0 5rem;
   justify-content: flex-end;
   padding: 1rem 2rem;
+  gap: 1rem;
 
   text-align: center;
   background-color: burlywood;
