--- a/src/view/main/game/field/field.css
+++ b/src/view/main/game/field/field.css
@@ -1,24 +1,26 @@
-.field {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  gap: 0.3rem;
+.row-container {
+  --font-size: 1.5rem;
+  --row-height: 2.5rem;
 
-  border: 2px solid blue;
-  min-height: 50px;
+  display: flex;
+  width: 100%;
+  gap: 0.5rem;
 }
 
 .field__row {
+  flex: 1 1 100%;
+  flex-wrap: wrap;
+  min-height: var(--row-height);
+
+
   --color-complete: rgb(150, 150, 150);
   --color-incomplete: rgb(0, 0, 0);
 
   display: flex;
   align-items: center;
   gap: 0.4rem;
-  height: 2rem;
 
   color: var(--color-incomplete);
-  font-weight: 700;
   user-select: none;
 
   &:has([complete]) {
@@ -32,37 +34,63 @@
 }
 
 .field__word {
-  --color-hover: rgb(252, 204, 116);
   --color-shadow: rgb(222, 254, 154);
+
+  display: flex;
+  z-index: 1;
+  flex: 0 1 2rem;
+  justify-content: center;
+  align-items: center;
 
   border: 1px solid grey;
   border-radius: 0.3rem;
   padding: 0.3rem 0.5rem;
 
+  font-size: var(--font-size);
+  font-weight: 700;
   cursor: pointer;
   user-select: none;
   box-shadow: 0.2rem 0.2rem 0.5rem var(--color-shadow);
+  background-color: var(--background-color);
 
   @media (hover: hover) {
     &:hover {
       transform: translate(-2px, -2px);
     }
   }
+
+  @container (max-width: 1024px) {
+    --font-size: 1.4rem;
+    --row-height: 2.4rem;
+  }
+
+  @container (max-width: 768px) {
+    --font-size: 1.2rem;
+    --row-height: 2rem;
+  }
+
+  @container (max-width: 425px) {
+    --font-size: 1rem;
+    --row-height: 1.6rem;
+  }
 }
 
 .container-destination,
 .container-source {
+  container-type: inline-size;
   display: flex;
   gap: 0.5rem;
   user-select: none;
 }
 
 .container-destination {
+  --background-color: rgb(255, 248, 220);
+
   flex: 1 1 auto;
   flex-direction: column;
   padding: 2rem;
 
-  background-color: cornsilk;
+  background-color: var(--background-color);
   background-image: url("./bg-container.webp");
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -71,17 +99,28 @@
 }
 
 .container-source {
-  flex: 0 1 3rem;
+  flex: 0 1 4rem;
   justify-content: center;
-  padding: 1rem;
+  padding: 0.5rem;
 
   font-size: 1.5rem;
   background-color: gainsboro;
   border-bottom: 2px solid grey;
+
+  & .field__row {
+    justify-content: center;
+  }
 }
 
 .line-number {
+  padding-top: 0.3rem;
   font-size: 1.5rem;
-  padding-right: 0.5rem;
   user-select: none;
+
+  &::after {
+    content: "...";
+    position: fixed;
+    z-index: -1;
+    padding-left: 1rem;
+  }
 }
