feat: RSS-PZ-16 Design Word Cards as Puzzle Pieces for Sentence Assembly (#41)

--- a/src/view/main/game/field/field.css
+++ b/src/view/main/game/field/field.css
@@ -1,38 +1,48 @@
 .row-container {
-  --font-size: 1.5rem;
-  --row-height: 2.5rem;
-
   display: flex;
   width: 100%;
-  gap: 0.5rem;
+  gap: 0;
 }
 
 .field__row {
-  --color-complete: rgb(150, 150, 150);
-  --color-incomplete: rgb(0, 0, 0);
+  --bg-color-word--complete: rgb(200, 180, 120);
+  --color-word-complete: rgb(0, 0, 0);
   --color-droparea-border: rgb(0, 127, 255);
   --color-droparea-bg: rgb(225, 255, 210);
 
   flex: 1 1 100%;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   min-height: var(--row-height);
+  padding-left: 0.4rem;
+  padding-right: 1rem;
 
   display: flex;
   align-items: center;
-  gap: 0.4rem;
+  gap: 0.2rem;
 
+  font-size: inherit;
   border: 2px dashed transparent;
-  color: var(--color-incomplete);
   user-select: none;
   animation-name: none;
 
   &:has([complete]) {
     pointer-events: none;
-    color: var(--color-complete);
 
     & .field__word {
-      box-shadow: none;
-      background-color: var(--color-droparea-bg);
+      flex: 1 1 1rem;
+
+      & .puzzle-core {
+        flex: 1 1 100%;
+      }
+
+      &::before, .puzzle-core, .puzzle-right-part {
+        color: var(--color-word-complete);
+        background-color: var(--bg-color-word--complete);
+      }
+
+      &[width] {
+        width: auto;
+      }
     }
   }
 
@@ -47,44 +57,13 @@
   --animation-delay: 500ms;
   --x-coord: 0;
   --y-coord: 0;
-  --color-shadow: rgb(187, 107, 2);
-  --background-color-word: rgb(255, 248, 220);
-  --background-color-hover: rgb(187, 107, 2);
   --color-hover: rgb(255, 255, 200);
-  --background-color-correct: rgb(125, 255, 0);
-  --background-color-wrong: rgb(255, 128, 0);
-
-  display: flex;
-  position: relative;
-  z-index: 1;
-  flex: 0 1 2rem;
-  justify-content: center;
-  align-items: center;
-
-  border: 1px solid grey;
-  border-radius: 0.3rem;
-  padding: 0.3rem 0.5rem;
-
-  font-size: var(--font-size);
-  font-weight: 700;
-  cursor: pointer;
-  box-shadow: 0.2rem 0.2rem 0.5rem var(--color-shadow);
-  background-color: var(--background-color-word);
-  transition-duration: 500ms;
-  touch-action: none;
 
   &[go-away] {
     z-index: 1;
     animation-name: word-go-away;
     animation-duration: var(--animation-delay);
     animation-iteration-count: 1;
-  }
-
-  @media (hover: hover) {
-    &:hover {
-      background-color: var(--background-color-hover);
-      color: var(--color-hover);
-    }
   }
 
   @container (max-width: 1024px) {
@@ -103,27 +82,30 @@
   }
 }
 
-.ghost-element {
+.ghost-element,
+.ghost-element:has(.puzzle-core),
+.ghost-element:has(.puzzle-element_mask),
+.ghost-element:has(.puzzle-right-part) {
   --ghost-size: 1rem;
-  position: relative;
-  transition-duration: 200ms;
+  transition-duration: 1000ms !important;
   transform: translateX(var(--ghost-size));
+  border: 1pz solid red !important;
 
   &::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    left: calc(var(--ghost-size)*-1);
-    width: var(--ghost-size);
-    height: 2rem;
+    width: calc(var(--ghost-size)*2) !important;
+    mask-position: calc(var(--ghost-size) + 3px) !important;
+    left: calc(var(--ghost-size)*-2);
   }
 }
 
 .container-destination,
 .container-source {
+  --font-size: 1.5rem;
+  --row-height: calc(var(--font-size) * 1.7);
+
   container-type: inline-size;
   display: flex;
-  gap: 0.5rem;
+  font-size: inherit;
   user-select: none;
 }
 
@@ -131,8 +113,9 @@
   --background-color: rgb(255, 248, 220);
 
   flex: 1 1 auto;
+  flex-wrap: nowrap;
   flex-direction: column;
-  padding: 2rem;
+  padding: 1rem 2rem;
 
   background-color: var(--background-color);
   background-image: url("./bg-container.webp");
@@ -143,20 +126,34 @@
 }
 
 .container-source {
-  flex: 0 1 4rem;
+  flex: 0 1 calc(var(--row-height) * 2.5);
   justify-content: center;
-  padding: 0.5rem;
+  align-items: flex-start;
+  padding: 0.2rem 2rem;
 
-  font-size: 1.5rem;
   background-color: rgb(220, 220, 220);
   border-bottom: 2px solid rgb(128, 128, 128);
 
   & .field__row {
     justify-content: center;
+    flex-wrap: wrap;
+    height: 100%;
+    gap: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    & .puzzle-element {
+      flex: 1 1 1rem;
+    }
+
+    & .puzzle-element[width] {
+      flex: 0 1 var(--width-element);
+    }
   }
 }
 
 .line-number {
+  flex: 0 0 2rem;
   padding-top: 0.3rem;
   font-size: 1.5rem;
   user-select: none;
@@ -165,16 +162,8 @@
     content: "...";
     position: fixed;
     z-index: -1;
-    padding-left: 1rem;
+    padding-left: 2rem;
   }
-}
-
-.word_wrong {
-  background-color: var(--background-color-wrong);
-}
-
-.word_correct {
-  background-color: var(--background-color-correct);
 }
 
 @keyframes word-go-away {
@@ -183,7 +172,6 @@
   }
   1% {
     transform: translate(var(--x-coord), calc(var(--y-coord) - 3rem));
-    background-color: var(--background-color-hover);
   }
   30% {
     transform: translate(calc(200% + var(--x-coord)), calc(var(--y-coord) - 7rem));
