feat: RSS-PZ-17 Implement Translation Hint Feature for Sentence Assembly (#42)

--- a/src/view/footer/footer.css
+++ b/src/view/footer/footer.css
@@ -45,6 +45,13 @@
   }
 }
 
+.btn-group-1 {
+  height: 100%;
+  width: 5rem;
+  padding: 0.5rem;
+  text-align: center;
+}
+
 .btn_check {
   background-color: var(--btn-check-active-bg-color);
 }
