--- a/src/view/main/game/game.css
+++ b/src/view/main/game/game.css
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+
+  background-image: url("./game-bg.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
