--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,4 +1,5 @@
 :root {
+  --background-color: rgb(222, 184, 135);
   --form-background-color: rgb(230, 230, 230);
   --form-background-valid: rgb(235, 255, 235);
   --form-background-invalid: rgb(255, 235, 235);
@@ -8,6 +9,7 @@
   --form-label-invalid: rgb(255, 0, 0);
 
   --main-padding-lr: 2rem;
+  --max-width-game: 80rem;
   --trantition-duration: 0;
 }
 
@@ -26,4 +28,5 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: var(--background-color);
 }
