--- a/src/components/hint-translate/hint-translate.css
+++ b/src/components/hint-translate/hint-translate.css
@@ -6,11 +6,14 @@
   --color-text: rgb(0, 0, 0);
   --color-border: var(--color-text);
 
+  width: clamp(40rem, 100%, var(--max-width-game));
   height: calc(var(--font-size)+var(--padding-top)*2);
+  align-self: center;
 
   font-size: var(--font-size);
   padding: var(--padding-top) var(--font-size);
 
+  border-radius: 1rem 1rem 0 0;
   border-bottom: 1px solid var(--color-border);
   border-top: 1px solid transparent;
 
