--- a/src/view/main/start/start.css
+++ b/src/view/main/start/start.css
@@ -13,7 +13,7 @@
   background-image: url('./background.webp');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .start__title {
