--- a/src/components/puzzle/puzzle.css
+++ b/src/components/puzzle/puzzle.css
@@ -14,7 +14,7 @@
   align-items: center;
   height: 2.2rem;
 
-  font-size: inherit;
+  /* font-size: inherit; */
   font-weight: 700;
   cursor: pointer;
   transition-duration: var(--trantition-duration);
