--- a/src/view/main/game/field/field.css
+++ b/src/view/main/game/field/field.css
@@ -65,20 +65,23 @@
     animation-duration: var(--animation-delay);
     animation-iteration-count: 1;
   }
+}
 
-  @container (max-width: 1024px) {
-    --font-size: 1.4rem;
-    --row-height: 2.4rem;
+@container (max-width: 1280px) {
+  .field__word {
+    font-size: 1.3rem;
   }
+}
 
-  @container (max-width: 768px) {
-    --font-size: 1.2rem;
-    --row-height: 2rem;
+@container (max-width: 1007px) {
+  .field__word {
+    font-size: 1.1rem;
   }
+}
 
-  @container (max-width: 425px) {
-    --font-size: 1rem;
-    --row-height: 1.6rem;
+@container (max-width: 751px) {
+  .field__word {
+    font-size: 1rem;
   }
 }
 
@@ -89,7 +92,6 @@
   --ghost-size: 1rem;
   transition-duration: 1000ms !important;
   transform: translateX(var(--ghost-size));
-  border: 1pz solid red !important;
 
   &::before {
     width: calc(var(--ghost-size)*2) !important;
