feat/async-race-04/api update car (#56)
* refactor: add generic to callback, change response's type

* feat: add API update car

--- a/src/components/car/car.css
+++ b/src/components/car/car.css
@@ -1,4 +1,6 @@
 .car {
-  padding: 1rem;
-  border: 1px solid grey;
+  padding: 0.3rem;
+
+  border: 2px solid transparent;
+  border-left: 8px solid transparent;
 }
