--- a/src/components/car/car.css
+++ b/src/components/car/car.css
@@ -1,6 +1,30 @@
 .car {
+  position: relative;
+  --color-car: "#999999";
+  --path-length: 100px;
+  --animation-time: 1000ms;
+
+  display: flex;
+  flex-direction: column;
   padding: 0.3rem;
+  gap: 0.3rem;
 
   border: 2px solid transparent;
   border-left: 8px solid transparent;
+  border-bottom: 2px dashed grey;
+
+  &::after {
+    content: "🏁";
+    position: absolute;
+    top: 1rem;
+    right: 5rem;
+    font-size: 2rem;
+  }
+}
+
+.car-main {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  gap: 0.5rem;
 }
