--- a/src/components/winners/winners.css
+++ b/src/components/winners/winners.css
@@ -1,4 +1,38 @@
 .winners {
   flex: 1 1 auto;
-  background-color: goldenrod;
+  background-color: var(--backgound-color-page);
+}
+
+.page {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr 1fr 2fr;
+
+  & div {
+    padding: 0.2rem;
+    border: 1px solid rgb(209, 209, 209);
+  }
+}
+
+.winners-header {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr 1fr 2fr;
+
+  & div {
+    padding: 0.2rem;
+    border: 1px solid rgb(209, 209, 209);
+    font-weight: 700;
+    font-size: 1rem;
+    user-select: none;
+
+    &:nth-child(n+4):nth-child(-n+5),
+    &:nth-child(1) {
+      cursor: pointer;
+
+      @media (hover: hover) {
+        &:hover {
+          color: blue;
+        }
+      }
+    }
+  }
 }
