--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 html {
   --max-width: 71rem;
   --background-color-html: rgb(50, 50, 50);
+  --backgound-color-page: rgb(242, 228, 208);
 
   background-color: var(--background-color-html);
 }
