--- a/src/components/base/button/button.css
+++ b/src/components/base/button/button.css
@@ -1,5 +1,12 @@
 .button {
   padding: 0.2rem 0.3rem;
-  border: 1px solid grey;
+  border: 1px solid rgb(128, 128, 128);
   border-radius: 0.3rem;
+  user-select: none;
+}
+
+.button_disabled {
+  pointer-events: none;
+  color: rgb(200, 200, 200);
+  border-color: rgb(200, 200, 200);
 }
