--- a/src/components/car/car.css
+++ b/src/components/car/car.css
@@ -60,6 +60,7 @@
   border: 1px solid black;
   border-radius: 0.3rem;
   background-color: var(--color-car);
+  user-select: none;
 }
 
 .car_move {
