--- a/src/components/garage/manage/create-car/create-car.css
+++ b/src/components/garage/manage/create-car/create-car.css
@@ -1,3 +1,14 @@
+.container-create {
+  display: flex;
+  gap: 0.3rem;
+}
+
 .create__input {
-  margin-right: 0.3rem;
+  max-width: var(--inputs-width);
+}
+
+.color__input[type] {
+  padding: 0;
+  width: 2rem;
+  height: 1.5rem;
 }
