--- a/src/components/garage/manage/update-car/update-car.css
+++ b/src/components/garage/manage/update-car/update-car.css
@@ -1,3 +1,8 @@
+.container-update {
+  display: flex;
+  gap: 0.3rem;
+}
+
 .update__input {
-  margin-right: 0.3rem;
+  max-width: var(--inputs-width);
 }
