--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html {
   --max-width: 71rem;
   --background-color-html: rgb(50, 50, 50);
   --backgound-color-page: rgb(242, 228, 208);
+  --inputs-width: 11rem;
   background-color: var(--background-color-html);
 }
 
