--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,13 +1,13 @@
 .container {
   max-width: var(--max-width);
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 
   margin: 0 auto;
   padding: 1rem;
 
-  background-color: gainsboro;
+  background-color: var(--backgound-color-page);
 }
 
 .hidden {
