--- a/src/components/car/car-model/car-model.css
+++ b/src/components/car/car-model/car-model.css
@@ -11,11 +11,11 @@
   --light-color: red;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
-    left: calc(var(--light-size)*-0.35);
-    top: calc(var(--light-size)*.8);
-    width: calc(var(--light-size)*.5);
+    left: calc(var(--light-size) * -0.35);
+    top: calc(var(--light-size) * 0.8);
+    width: calc(var(--light-size) * 0.5);
     height: var(--light-size);
     border-radius: 0 100% 100% 0;
     background-color: rgba(255, 0, 0, 0.6);
@@ -27,13 +27,13 @@
   }
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     right: 0.6rem;
     top: -0.6rem;
     width: 3rem;
     height: 2rem;
-    background-image: url("./smoke.gif");
+    background-image: url('./smoke.gif');
     background-size: 100% 100%;
   }
 }
@@ -51,4 +51,4 @@
   100% {
     opacity: 0;
   }
-  }
+}
