--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,3 +1,9 @@
+:root {
+  --font-size-normal: 1.3rem;
+
+  --background-color-html: rgb(40, 40, 40);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -5,7 +11,6 @@
 }
 
 html {
-  --background-color-html: rgb(40, 40, 40);
   background-color: var(--background-color-html);
 }
 
