--- a/src/app/components/pages/login/login.css
+++ b/src/app/components/pages/login/login.css
@@ -14,8 +14,8 @@
   flex-direction: column;
   gap: 1rem;
 
-  font-size: 1.3rem;
-  line-height: 3rem;
+  font-size: var(--font-size-normal);
+  line-height: calc(var(--font-size-normal) * 2);
 
   & input,
   button {
@@ -24,4 +24,9 @@
     padding: 0.2rem 1rem;
     border-radius: 0.5rem;
   }
+}
+
+button {
+  cursor: pointer;
+  user-select: none;
 }
