--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,6 +2,8 @@
   --font-size-normal: 1.3rem;
 
   --background-color-html: rgb(40, 40, 40);
+
+  --text-color-normal: rgb(240, 255, 240);
 }
 
 * {
