--- a/src/app/components/pages/chat/users-list/users-list.css
+++ b/src/app/components/pages/chat/users-list/users-list.css
@@ -1,6 +1,7 @@
 .users {
+  flex: 1 1 auto;
+
   color: var(--text-color-normal);
-  padding: 1rem 1rem 1rem 2rem;
   font-size: var(--font-size-normal);
   line-height: calc(var(--font-size-normal) * 1.4);
 
