--- a/src/app/components/pages/chat/history-view/history-view.css
+++ b/src/app/components/pages/chat/history-view/history-view.css
@@ -4,8 +4,26 @@
   font-size: var(--font-size-normal);
   padding: 0.5rem;
 
+  overflow-y: auto;
+
   border: 4px solid rgb(13, 65, 117);
   background-color: rgb(47, 47, 47);
 
   color: var(--text-color-normal);
+
+  &::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  &::-webkit-scrollbar-button {
+    background: rgb(13, 65, 117);
+  }
+
+  &::-webkit-scrollbar-track-piece {
+    background: #bde3ff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #899bbd;
+  }
 }
