--- a/src/app/components/pages/chat/users-list/users-list.css
+++ b/src/app/components/pages/chat/users-list/users-list.css
@@ -10,9 +10,29 @@
   }
 }
 
+.users li {
+  padding-left: 0.5rem;
+  border: 4px solid transparent;
+  border-right: none;
+  border-radius: 0.3rem;
+}
+
 .users li[active] {
   &::marker {
     color: greenyellow;
     font-size: calc(var(--font-size-normal) * 1.3);
+  }
+}
+
+.users li[selected] {
+  border: 4px solid rgb(13, 65, 117);
+  border-right: none;
+}
+
+@media (hover: hover) {
+  .users li:hover {
+    background-color: color-mix(in srgb, var(--background-color-html) 80%, white 20%);
+    color: color-mix(in srgb, var(--text-color-normal) 80%, black 20%);
+    cursor: pointer;
   }
 }
