--- a/src/app/app.css
+++ b/src/app/app.css
@@ -25,3 +25,10 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.__inactive-element {
+  filter: sepia(1) brightness(0.5);
+  user-select: none;
+  pointer-events: none;
+  cursor: default;
+}
