feat: implement reconnect after shutdown the server (#95)
* fix: remove multi instance class Connect

* feat: add support reconnect

* feat: add modal message about disconnect

* feat: implement reconnect after shutdown the server

--- a/src/app/components/component/modal-message/modal-message.css
+++ b/src/app/components/component/modal-message/modal-message.css
@@ -32,6 +32,8 @@
   line-height: calc(var(--font-size-normal) * 2);
   color: rgb(220, 220, 255);
   font-size: var(--font-size-normal);
+  pointer-events: none;
+  user-select: none;
 }
 
 .dialog__btn-close {
