fix: some css bugs, chat scroll, message textarea (#96)
* fix: chat shoud to scroll to last message

* fix: message-edit textarea to input

* fix: some css bugs

--- a/src/app/components/pages/chat/history-view/history-view.css
+++ b/src/app/components/pages/chat/history-view/history-view.css
@@ -20,10 +20,10 @@
   }
 
   &::-webkit-scrollbar-track-piece {
-    background: #bde3ff;
+    background: rgb(13, 65, 117);
   }
 
   &::-webkit-scrollbar-thumb {
-    background: #899bbd;
+    background: rgb(189, 227, 255);
   }
 }
