--- a/src/app/components/pages/chat/chat.css
+++ b/src/app/components/pages/chat/chat.css
@@ -1,8 +1,9 @@
 .chat {
   display: flex;
-  width: 100%;
+  width: clamp(0px, 100%, 75rem);
   height: 100%;
   padding: 1rem;
+  margin: 0 auto;
 }
 
 .chat-container {
