--- a/src/app/components/pages/chat/history-view/message-unit/message-unit.css
+++ b/src/app/components/pages/chat/history-view/message-unit/message-unit.css
@@ -1,4 +1,6 @@
 .message-item {
+  --message-ft-size: 1.3rem;
+
   display: flex;
   flex-direction: column;
   width: 80%;
@@ -8,6 +10,7 @@
   border-radius: 0.3rem;
   padding: 0.2rem 0.5rem;
   margin-bottom: 1rem;
+  word-break: break-all;
 }
 
 .message-item__header {
@@ -24,8 +27,8 @@
 
 .message-item__header,
 .footer__statuses {
-  line-height: calc(var(--font-size-normal) * 0.7);
-  font-size: calc(var(--font-size-normal) * 0.7);
+  line-height: calc(var(--message-ft-size) * 0.7);
+  font-size: calc(var(--message-ft-size) * 0.7);
   color: color-mix(in srgb, var(--text-color-normal) 80%, black 20%);
 }
 
@@ -43,15 +46,24 @@
   text-align: right;
 }
 
+.message-item__content {
+  font-size: var(--message-ft-size);
+}
+
 .footer_btn {
   display: flex;
   justify-content: center;
   align-items: center;
 
   padding: 0.2rem 0.7rem 0.2rem 0.5rem;
-  color: #d1d1d1;
-  background-color: rgb(96, 91, 56);
+  color: #ffffff;
+  background-color: rgb(135, 130, 154);
   border-radius: 0.6rem 0 0.6rem 0;
+}
+
+.btn__delete {
+}
+.btn__edit {
 }
 
 .footer__statuses {
@@ -62,5 +74,53 @@
 @media (hover: hover) {
   .footer_btn:hover {
     background-color: color-mix(in srgb, rgb(96, 91, 56) 80%, white 20%);
+  }
+}
+
+@media (max-width: 380px) {
+  .message-item {
+    --message-ft-size: 0.9rem;
+  }
+  .footer_btn {
+    padding: 0;
+    font-size: 0;
+    min-width: 1rem;
+    min-height: 1rem;
+    border-radius: 0.3rem;
+  }
+  .btn__delete::after {
+    content: '❌';
+    font-size: 0.7rem;
+  }
+  .btn__edit::after {
+    content: '✏️';
+    font-size: 0.7rem;
+  }
+  .message-item {
+    width: 90%;
+  }
+}
+
+@media (min-width: 381px) and (max-width: 600px) {
+  .message-item {
+    --message-ft-size: 1rem;
+  }
+  .footer_btn {
+    font-size: 0;
+    padding: 0;
+    min-width: 1.2rem;
+    min-height: 1.2rem;
+    border-radius: 0.3rem;
+  }
+  .btn__delete::after {
+    content: '❌';
+    font-size: 0.7rem;
+  }
+  .btn__edit::after {
+    content: '✏️';
+    font-size: 0.7rem;
+  }
+  .message-item {
+    width: 90%;
   }
 }
