--- a/src/app/components/pages/chat/message-edit/message-edit.css
+++ b/src/app/components/pages/chat/message-edit/message-edit.css
@@ -11,7 +11,6 @@
 
 .dialog__container {
   width: clamp(10rem, 90vw, 30rem);
-  height: clamp(6rem, 100dvh, 20rem);
   flex-direction: column;
   padding: 1rem;
   gap: 1rem;
@@ -29,10 +28,8 @@
   height: 100%;
 }
 
-.form__textarea {
+.form__input {
   width: 100%;
-  resize: none;
-  flex: 1 1 auto;
   border-radius: 0.5rem;
   padding: 0.5rem;
   background-color: #f3ede3;
@@ -41,7 +38,7 @@
 
 .btn-container {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .form__button {
@@ -59,5 +56,17 @@
   .form__button:hover {
     color: white;
     background-color: #7b6bdf;
+  }
+}
+
+@media (max-width: 380px) {
+  .btn-container {
+    gap: 0.2rem;
+  }
+}
+
+@media (min-width: 381px) and (max-width: 600px) {
+  .btn-container {
+    gap: 0.4rem;
   }
 }
