--- a/src/app/components/pages/chat/users-list/users-list.css
+++ b/src/app/components/pages/chat/users-list/users-list.css
@@ -1,13 +1,9 @@
 .users {
+  --users-ft-size: 1.3rem;
+
   flex: 1 1 30%;
-
   color: var(--text-color-normal);
-  font-size: var(--font-size-normal);
-  line-height: calc(var(--font-size-normal) * 1.4);
-
-  &::marker {
-    line-height: calc(var(--font-size-normal) * 1.4);
-  }
+  line-height: calc(var(--users-ft-size) * 1.4);
 }
 
 .users li {
@@ -15,12 +11,14 @@
   border: 4px solid transparent;
   border-right: none;
   border-radius: 0.3rem;
+  word-break: break-all;
+  font-size: var(--users-ft-size);
 }
 
 .users li[active] {
   &::marker {
-    color: greenyellow;
-    font-size: calc(var(--font-size-normal) * 1.3);
+    color: rgb(173, 255, 47);
+    font-size: calc(var(--users-ft-size) * 1.3);
   }
 }
 
@@ -34,5 +32,17 @@
     background-color: color-mix(in srgb, var(--background-color-html) 80%, white 20%);
     color: color-mix(in srgb, var(--text-color-normal) 80%, black 20%);
     cursor: pointer;
+  }
+}
+
+@media (max-width: 380px) {
+  .users {
+    --users-ft-size: 0.9rem;
+  }
+}
+
+@media (min-width: 381px) and (max-width: 600px) {
+  .users {
+    --users-ft-size: 1rem;
   }
 }
