--- a/src/app/components/pages/chat/users-list/users-list.css
+++ b/src/app/components/pages/chat/users-list/users-list.css
@@ -1,6 +1,7 @@
 .users {
   --users-ft-size: 1.3rem;
 
+  grid-area: u;
   flex: 1 1 30%;
   color: var(--text-color-normal);
   line-height: calc(var(--users-ft-size) * 1.4);
