--- a/src/app/components/pages/chat/history-view/history-view.css
+++ b/src/app/components/pages/chat/history-view/history-view.css
@@ -4,26 +4,10 @@
   font-size: var(--font-size-normal);
   padding: 0.5rem;
 
-  overflow-y: auto;
+  overflow-y: scroll;
 
   border: 4px solid rgb(13, 65, 117);
   background-color: rgb(47, 47, 47);
 
   color: var(--text-color-normal);
-
-  &::-webkit-scrollbar {
-    width: 3px;
-  }
-
-  &::-webkit-scrollbar-button {
-    background: rgb(13, 65, 117);
-  }
-
-  &::-webkit-scrollbar-track-piece {
-    background: rgb(13, 65, 117);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: rgb(189, 227, 255);
-  }
 }
