--- a/src/app/components/pages/chat/users-list/users-list.css
+++ b/src/app/components/pages/chat/users-list/users-list.css
@@ -6,15 +6,37 @@
   color: var(--text-color-normal);
   line-height: calc(var(--users-ft-size) * 1.4);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .users li {
+  position: relative;
   padding-left: 0.5rem;
   border: 4px solid transparent;
   border-right: none;
   border-radius: 0.3rem;
   word-break: break-all;
   font-size: var(--users-ft-size);
+}
+
+.user-has-new-message {
+  &::after {
+    content: attr(data-new-messages);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 0;
+    top: 0;
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 50% 50% 50% 1%;
+    background-color: #eef5a6;
+    border: 1px solid red;
+    color: black;
+    font-weight: 700;
+    font-family: 'Courier New', Courier, monospace;
+  }
 }
 
 .users li[active] {
