fix: logout, Header, UsersController, HistoryView, MessageEdit, UsersController (#102)
* fix: after logout user1 rests chat user2

* fix: user name in the Header doesn't change after login like another user

* fix: the UsersController reduce rerender's count

* fix: the HistoryView sometime don't rerender

* fix: the MessageEdit button's css

* fix: the UsersController doesn't rerender event user-select

--- a/src/app/components/pages/chat/message-edit/message-edit.css
+++ b/src/app/components/pages/chat/message-edit/message-edit.css
@@ -53,9 +53,14 @@
 }
 
 @media (hover: hover) {
-  .form__button:hover {
-    color: white;
-    background-color: #7b6bdf;
+  .form__button {
+    font-size: calc(var(--font-size-normal) * 1);
+    line-height: calc(var(--font-size-normal) * 1.5);
+
+    &:hover {
+      color: white;
+      background-color: #7b6bdf;
+    }
   }
 }
 
